Bug 316452 - ktp-call-ui (dialout widget) doesn't work with rakia accounts (SIP) due to misfiltering
Summary: ktp-call-ui (dialout widget) doesn't work with rakia accounts (SIP) due to mi...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: call-ui (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-10 08:31 UTC by Vadim A. Misbakh-Soloviov (mva)
Modified: 2013-03-10 21:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vadim A. Misbakh-Soloviov (mva) 2013-03-10 08:31:31 UTC
Hi there!
I guess it is probably my own bug, maybe even unrelated to call-ui code, but I can't get latest ktp-call-ui (from git) to work with rakia.
It says me:
«
No capable accounts found.  Please make sure, that you are online and that the accounts that you have configured support audio and/or video calls
»

At the same time, rakia-accounts:
1) connected to SIP-servers successfully (I see it in connection list in my SIP-provider billing)
2) rakia, *support* audio/video-calls

Reproducible: Always




Also, tell me, please, what info should I put here to help you to help me? :)
Comment 1 David Edmundson 2013-03-10 14:08:39 UTC
Did it work in 0.5?
Comment 2 David Edmundson 2013-03-10 14:26:24 UTC
[14:14] <mva> so, then it worked fine when git master was 0.5.3


This means it's my new AccountsFiltering that's "broken" for SIP.

Old code looked at account->capabilities->audioCalls();

new code filters on requestableChannelClassSpec.

Need someone to look at TpQt code and see what Capcabilities:::audioCalls() is actually checking. Also look to see if we can change our AccountFitler to use that.
Comment 3 Vadim A. Misbakh-Soloviov (mva) 2013-03-10 15:46:03 UTC
should be fixed in git head. Patch is sent to David Edmundson.
Comment 4 David Edmundson 2013-03-10 16:27:08 UTC
Git commit 4976179aa756f0f121d0611dfa9ca64de49d81ab by David Edmundson.
Committed on 10/03/2013 at 16:53.
Pushed by davidedmundson into branch 'master'.

Filter for both new and older audio/video call specs

M  +14   -3    src/dialout/dialout-widget.cpp

http://commits.kde.org/telepathy-call-ui/4976179aa756f0f121d0611dfa9ca64de49d81ab
Comment 5 Vadim A. Misbakh-Soloviov (mva) 2013-03-10 21:28:38 UTC
Thanks a lot, David! ;)