Filter for both new and older audio/video call specs

BUG: 316452