src/dialout/dialout-widget.cpp
@@ -102,14 +102,25 @@ void DialoutWidget::onAccountManagerReady(Tp::PendingOperation* op)
     Tp::AccountPropertyFilterPtr isOnlineFilter = Tp::AccountPropertyFilter::create();
     isOnlineFilter->addProperty(QLatin1String("online"), true);
 
-    Tp::AccountCapabilityFilterPtr audioCallFilter = Tp::AccountCapabilityFilter::create(
+    Tp::AccountCapabilityFilterPtr streamedAudioCallFilter = Tp::AccountCapabilityFilter::create(
                 Tp::RequestableChannelClassSpecList() << Tp::RequestableChannelClassSpec::RequestableChannelClassSpec::streamedMediaAudioCall());
 
-    Tp::AccountCapabilityFilterPtr videoCallFilter = Tp::AccountCapabilityFilter::create(
+    Tp::AccountCapabilityFilterPtr streamedVideoCallFilter = Tp::AccountCapabilityFilter::create(
                 Tp::RequestableChannelClassSpecList() << Tp::RequestableChannelClassSpec::RequestableChannelClassSpec::streamedMediaVideoCall());
 
+    //need both streamed audio and normal audio to match older and newer CM
 
-    Tp::AccountFilterPtr capabilityFilter = Tp::OrFilter<Tp::Account>::create(QList<Tp::AccountFilterConstPtr>() << audioCallFilter << videoCallFilter);
+    Tp::AccountCapabilityFilterPtr audioCallFilter = Tp::AccountCapabilityFilter::create(
+                Tp::RequestableChannelClassSpecList() << Tp::RequestableChannelClassSpec::RequestableChannelClassSpec::audioCall());
+
+    Tp::AccountCapabilityFilterPtr videoCallFilter = Tp::AccountCapabilityFilter::create(
+                Tp::RequestableChannelClassSpecList() << Tp::RequestableChannelClassSpec::RequestableChannelClassSpec::videoCall());
+
+    Tp::AccountFilterPtr capabilityFilter = Tp::OrFilter<Tp::Account>::create(QList<Tp::AccountFilterConstPtr>() << streamedAudioCallFilter
+                                                                                                                 << streamedVideoCallFilter
+                                                                                                                 << audioCallFilter
+                                                                                                                 << videoCallFilter);
+    
     Tp::AccountFilterConstPtr accountFilter = Tp::AndFilter<Tp::Account>::create(QList<Tp::AccountFilterConstPtr>() << isOnlineFilter << capabilityFilter);
 
     Tp::AccountSetPtr accountSet = d->accountManager->filterAccounts(accountFilter);
